WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253927
ReleaseSerializedImageBuffer doesn't release the underlying IOSurface
https://bugs.webkit.org/show_bug.cgi?id=253927
Summary
ReleaseSerializedImageBuffer doesn't release the underlying IOSurface
Matt Woodrow
Reported
2023-03-14 19:05:43 PDT
We're adding a read reference in the RemoteSerializedImageBufferProxy constructor, and we never have any reads happen if we destroy the RemoteSerializedImageBufferProxy without transferring to an ImageBuffer. This shouldn't happen often, but can happen if you draw to an OffscreenCanvas, call `commit()`, and then draw again quickly (not waiting for rAF).
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2023-03-14 19:08:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11534
EWS
Comment 2
2023-03-15 12:15:48 PDT
Committed
261703@main
(284c71ac630f): <
https://commits.webkit.org/261703@main
> Reviewed commits have been landed. Closing PR #11534 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-03-15 12:16:16 PDT
<
rdar://problem/106767160
>
Matt Woodrow
Comment 4
2023-04-06 11:07:37 PDT
***
Bug 254974
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug